# NIAMH-MPCD

./: .gitignore  CMakeLists.txt  Makefile
Sphinx/Example/source/: conf.py  index.rst
Sphinx/Example/source/chapter1/: chapter1.rst  math.txt
Sphinx/Example/source/introduction/: Introduction.rst  MPCD.txt  usage.txt
Sphinx/Userguide/source/: conf.py  index.rst
Sphinx/Userguide/source/Analysis/: Analysis.rst  density2Danimated.txt  localS.txt  (+7 more)
analysisScripts/: defectHandler.py  density2Danimated.py  flowFieldAnimated.py  fluidParticleTrajectories2Danimated.py  orientationField2Danimated.py  polymer-2Dprojection-more.py
docs/: InputGuide.md  OutputGuide.md
md/: mdfiles.c  mdsetup.c  mdsrd.c  mdtypes.h
movieMakers/: activityField2DAnimated.py  defectHandler.py  densVelDir.sh  density2Danimated.py  flowFieldAnimated.py  orderContours-defCentered.py  orderContours2DAnimated.py  orientationField2Danimated.py
mpcd/: mpcd.c
mpcd/data/: input.json
mpcd/headers/: SRDclss.h  bc.h  ctools.h  definitions.h  init.h  mpc.h  mtools.h  multiphase.h  pout.h  swimmers.h
mpcd/subroutines/: bc.c  ctool.c  init.c  lc.c  mdbc.c  mpc.c  mtools.c  multiphase.c  pout.c  read.c  swimmers.c  therm.c
sampleInputs/01_FirstSimulation_PassiveIsotropic2D/: input.json
sampleInputs/02_cleanerFirstSimulation/: README.md
sampleInputs/Manypolymers/: input.json
sampleInputs/activeNem2D/: input.json
sampleInputs/colloid/: input.json
sampleInputs/manyPolymers/: input.json  md.inp
sampleInputs/md2D/: md.inp
sampleInputs/md3D/: md.inp
sampleInputs/passiveNem2D/: input.json
sampleInputs/polymerTranslocation/: input.json
(+58 files in other folders)
